fix item overlapping

--- a/src/assets/stylesheet/component/cards-1and1.scss
+++ b/src/assets/stylesheet/component/cards-1and1.scss
@@ -21,7 +21,7 @@
 }
 
 .cards__icon--1and1:nth-child(4) {
-  top: 10%;
-  left: -5%;
+  top: 5%;
+  left: -10%;
   transform: rotate(330deg);
 }
